# pypiratzzi

./: .gitignore  Makefile  README.rst  pyproject.toml  update-version.py
signatures/: pypiratzzi-23.8.0-py3-none-any.whl.asc  pypiratzzi-23.8.0.tar.gz.asc
src/hancock/: cli.py
src/pypiratzzi/: cli.py
