[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypiratzzi"
dynamic = ["version"]
description = "pypiratzzi downloads signatures from PyPI."
readme = "README.rst"
license.text = "GPL"
authors = [
    { name = "meejah", email = "meejah@meejah.ca" },
]
requires-python = ">=3.6"
keywords = [
    "cryptography",
    "signatures",
    "pypi",
]
classifiers = [
    "Framework :: Twisted",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "setuptools",
    "click",
    "twisted",
    "treq",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-twisted",
    "pytest-cov",
    "cuvner",
]
dev = [
    "twine",
    "sphinx",
    "dulwich",
    "gpg",  # should use isis lovecruft's version?
    "pip-tools",
    "hatchling",
    "readme_renderer",
]

[project.scripts]
pypiratzzi = "pypiratzzi.cli:_entry"

[tool.hatch.version]
path = "src/pypiratzzi/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.rst",
    "pyproject.toml",
    "requirements-pinned.txt",
]
exclude = [
    "*~",
    "*.egg-info*",
]
